@@ -3,8 +3,7 @@
 <h4><a name="Bugs" id="Bugs"></a>Known Bugs</h4>
 
 <p class="text">
-       The  network file parser is not 100% trustworthy. 
-       For instance, complicated Pajek or GraphML files can crash the application.
+	Technically, our only limit is our code quality :) But we keep improve it. In any case, if you have any questions, just ask or submit a bug report (see below)
 </p>
 <p class="text">
        Antialiasing is on by default. To boost the speed of node movement, you can disable it by pressing F8.
@@ -15,7 +14,7 @@
 In order to send a meaningful bug report, run socnetv from a terminal, press F9 and repeat the steps  which  lead to bug manifestation. SocNetV will be printing debug messages on the standard output -- the terminal in Linux.
 </p>
 <p class="text">
-Then post the bug report in our <a href="https://sourceforge.net/forum/forum.php?forum_id=534232">"Bugs and Help" forum</a>. 
+Then post the bug report in our bug tracker: <a href="https://bugs.launchpad.net/socnetv">https://bugs.launchpad.net/socnetv</a>
 <br/>
 </p>
 
