@@ -3,7 +3,8 @@
 
 <h4><a name="License" id="License"></a>License</h4>
 <p class="author">
-Copyright &copy 2005-2009 by Dimitris V. Kalamaras 
+Copyright &copy 2005-2009 by Dimitris V. Kalamaras.  <br />
+Blog: <a href="http://dimitris.apeiro.gr" target="_blank">http://dimitris.apeiro.gr</a>
 </p>
 <p class="text">
 This documentation is licensed under the terms of the GNU Free Documentation License.
@@ -26,15 +27,12 @@ Many thanks to:
 	<li>Andre Somers, for bug fixing and useful comments</li>
 	<li>Serafeim Zanikolas (Debian packager) </li>
 	<li>Markos Chandras (Gentoo packager)</li>
+	<li>Tom Tryfonidis (Arch packager)</li>
 	<li>Alejandro Garrido Mota (Debian packager)</li>
 	<li>Martin Hohenberg</li>	
 	<li>Victor Cardoso</li>
 	<li>Paul Johnson</li>
-	<li>Martin Hohenberg </li>
 	<li>David de Ugarte, for an older Spanish translation</li>
-
-	<li>Gregoris Koutsoyiannis </li>
-
 </ul>
 </div>
 
