@@ -42,6 +42,7 @@ vertical-align: bottom;
 
 .author {
   color: rgb(82,80,82);
+  font-size: 11px;
   font-weight: bold;
   padding: 0;
   margin: 0;
