@@ -9,7 +9,6 @@
 	<ul>
 	<li> <a href="intro.html#Fundamentals">Fundamentals</a></li>
 	<li> <a href="intro.html#Capabilities">Capabilities</a></li>
-	<li> <a href="intro.html#Availability">Availability</a></li>
 	<li> <a href="intro.html#Install">Installation</a></li>
 	<li> <a href="intro.html#RunOptions">Execution Options</a></li>
 
